fix broken timeline on smaller screen size

--- a/src/components/About/TimeLine/timeLine.scss
+++ b/src/components/About/TimeLine/timeLine.scss
@@ -123,6 +123,37 @@ $fgWhite: #f8f8f8;
   .timeLine {
     ul {
       &::before {
+        height: 0%;
+      }
+      &::after {
+        content: "";
+      }
+    }
+    font-size: 1.2rem;
+    li {
+      margin: 50px 0px;
+      span {
+        left: -40px;
+      }
+    }
+    .time {
+      div {
+        position: absolute;
+        font-size: 0.6rem;
+        left: 0px;
+      }
+    }
+    .skillMark {
+      width: 0px !important;
+      height: 0px !important;
+    }
+  }
+}
+@media only screen and (max-width: 420px) {
+  .timeLine {
+    ul {
+      left: -15px;
+      &::before {
         height: 400%;
       }
       &::after {
@@ -146,6 +177,13 @@ $fgWhite: #f8f8f8;
     .skillMark {
       width: 20px !important;
       height: 2px !important;
+    }
+  }
+}
+@media only screen and (max-width: 375px) {
+  .timeLine {
+    ul {
+      left: 0px !important;
     }
   }
 }
